--- a/src/components/together/mine/Look.css
+++ b/src/components/together/mine/Look.css
@@ -5,7 +5,7 @@
 }
 
 .shuzhi{
-    height: 78vh;
+    height: 70vh;
     width: 95vw;
 }
 
@@ -62,7 +62,7 @@
 }
 
 .lookMemory{
-    height: 68vh;
+    height: 60vh;
     width: 80vw;
     background: #FFFFFF;
     position: relative;
@@ -92,9 +92,15 @@
 .lookPhoto{
     margin: 2vh 0;
     width: 80vw;
-    height: 45vh;
+    height: 40vh;
     border: 1px solid rgba(0, 0, 0, 0.477);
     object-fit: cover;
+}
+
+.lookPhoto Image {
+    width: 100%; /* 图片宽度占满父容器 */
+    height: 100%; /* 图片高度占满父容器 */
+    object-fit: contain; /* 图片保持原比例，并完全适合父容器 */
 }
 
 .lookDate{
