--- a/src/components/together/mine/Topic.css
+++ b/src/components/together/mine/Topic.css
@@ -1,6 +1,6 @@
 .topic{
     width: 100vw;
-    height: 82.5vh;
+    height: 72.2vh;
     display: flex;
     flex-wrap: wrap;
     overflow: scroll;
@@ -16,7 +16,7 @@
     text-align: center;
 }
 
-.topicBack view{
+.topicBack View{
     width: 20vh;
     height: 20vh;
     position: relative;
