--- a/src/pages/mytopic/index.css
+++ b/src/pages/mytopic/index.css
@@ -17,9 +17,19 @@
     z-index: 99999;
 }
 
+.ontopic{
+    position: relative;
+}
+
+.all{
+    height: 100vh;
+    overflow: hidden;
+}
+
 .zu119{
     width: 6vh;
     height: 6vh;
+    top: 6vh;
     position: absolute;
     top: 0.3vh;
     left: 3%;
@@ -36,7 +46,7 @@
 .background{
     position: absolute;
     width: 100%;
-    height: 94vh;
+    height: 84vh;
     z-index: -2;
 }
 
@@ -61,7 +71,7 @@
 .contentDisplay{
     position: relative;
     width: 100vw;
-    height: 94vh;
+    height: 74vh;
     margin: 0 10vw;
     overflow: scroll;
     word-wrap: break-word;
@@ -70,7 +80,6 @@
 .content{
     padding: 1vw 1vw 2vw 5vw;
     width: 74vw;
-    height: 24vh;
     background: #FFFFFF;
     position: relative;
     z-index: 1;
@@ -90,6 +99,14 @@
     word-wrap: break-word;
     border-bottom: 1px solid rgba(0, 0, 0, 0.34);
     letter-spacing: 0.5vw;
+    z-index: 2;
+}
+
+.showPhoto{
+    position: relative;
+    z-index: 999;
+    width: 95%;
+    object-fit: cover;
 }
 
 .deletecontent{
