--- a/src/pages/Log_in/Log_in.css
+++ b/src/pages/Log_in/Log_in.css
@@ -5,7 +5,7 @@
     justify-content: center;
     width: 100vw;
     height: 100vh;
-    background-image: url(../../assets/image/Log-in/background.png);
+    background-image: url(https://img2.imgtp.com/2024/03/24/uDWmixEp.png);
     background-size: 1800px 1600px;
     background-position-x: 42%;
     background-position-y: 35%;
