--- a/src/component/Login_header/Login_header.css
+++ b/src/component/Login_header/Login_header.css
@@ -6,22 +6,26 @@
 }
 
 .logo {
+    position: relative;
+    right: 7%;
     height: 300px;
     width: 100%;
     background-color: #b78a8a;
-    background: url(../../assets/image/Log-in/logo.png) no-repeat;
+    background: url(https://img2.imgtp.com/2024/03/24/YNpnV3Ho.png) no-repeat;
     background-size: 400px;
     background-position-x: 37%;
     background-position-y: 70%;
 }
 
 .header-title {
+    /* memory */
     position: absolute;
-    top: 22%;
+    top: 60%;
+    right: 10%;
     width: 100%;
     height: 80px;
     font-size: 60px;
-    background: url(../../assets/image/Log-in/memory.png) no-repeat;
+    background: url(https://img2.imgtp.com/2024/03/24/zG3Llx0E.png) no-repeat;
     background-size: 220px;
     background-position-x: 50%;
 }
