--- a/src/pages/Forget/Forget.css
+++ b/src/pages/Forget/Forget.css
@@ -5,7 +5,7 @@
     justify-content: center;
     width: 100vw;
     height: 100vh;
-    background-image: url(../../assets/image/Log-in/background.png);
+    background-image: url(https://img2.imgtp.com/2024/03/24/uDWmixEp.png);
     background-size: 1800px 1600px;
     background-position-x: 42%;
     background-position-y: 35%;
@@ -32,25 +32,7 @@
     align-items: center;
 }
 
-.logo {
-    height: 300px;
-    width: 100%;
-    background-color: #b78a8a;
-    background: url(../../assets/image/Log-in/logo.png) no-repeat;
-    background-size: 400px;
-    background-position-x: 37%;
-    background-position-y: 70%;
-}
 
-.header-title {
-    position: absolute;
-    top: 22%;
-    width: 100%;
-    height: 80px;
-    background: url(../../assets/image/Log-in/memory.png) no-repeat;
-    background-position-x: 50%;
-    background-size: 220px;
-}
 
 .submit-back {
     position: relative;
@@ -61,27 +43,3 @@
     gap: 20px;
 }
 
-.submit-top {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 30px;
-    width: 100%;
-}
-
-.button {
-    width: 70vw;
-    height: 70px;
-    color: #BBBBCC;
-    font-size: 30px;
-    line-height: 70px;
-    border-radius: 50px;
-    box-shadow: 0px 2px 8px 5px rgb(241, 240, 240);
-    border: none;
-}
-
-.submit-foot1 {
-    color: #2383E0;
-    font-size: 31px;
-
-}
