--- a/src/pages/Multiple/Multiple.css
+++ b/src/pages/Multiple/Multiple.css
@@ -1,59 +1,19 @@
-.header {
-    display: flex;
-    flex-direction: column;
-    padding: 1vh;
-}
 
-.title {
-    height: 10vh;
-    background-color: #f8f8f8;
-    display: flex;
-    justify-content: space-between;
-}
-
-.none {
-    width: 30vw;
-    height: 5vh;
-}
-
-.title-logo {
-    background: url(../../assets/image/Log-in/memory.png) no-repeat;
-    background-size: 150px;
-    background-position-y: 90%;
-    width: 30vw;
-}
-
-.title-content {
-    font: 600 40px FZYaoTi;
-    position: relative;
-    top: 60%;
-}
-
-.second-title {
-    display: flex;
-    justify-content: space-between;
-    background-color: #fff;
-    height: 5vh;
-}
-
-#second-title-content {
-    font: 600 40px FZYaoTi;
-    line-height: 5vh;
-}
-
-.homepage {
+.return {
+    /* homepage */
     width: 10vw;
     height: 5vh;
-    background: url(../../assets/image/Multiple/homepage.png) no-repeat;
+    background: url(https://img2.imgtp.com/2024/03/24/B5T90Aee.png) no-repeat;
     background-size: 11vw;
     background-position-x: 50%;
     background-position-y: 5%;
 }
 
-.more {
+.next-page {
+    /* more */
     width: 10vw;
     height: 5vh;
-    background: url(../../assets/image/Multiple/more.png) no-repeat;
+    background: url(https://img2.imgtp.com/2024/03/24/RfgzV8Q3.png) no-repeat;
     background-size: 11vw;
     background-position-x: 50%;
     background-position-y: 5%;
@@ -62,7 +22,7 @@
 .background {
     width: 100vw;
     height: 89vh;
-    background: url(../../assets/image/Multiple/background.png) repeat-y;
+    background: url(https://img2.imgtp.com/2024/03/24/lr8jUOHp.png) repeat-y;
     overflow-y: auto;
     background-size: 100vw;
     background-position-x: 50%;
@@ -71,7 +31,7 @@
 }
 
 .bubble1 {
-    background: url(../../assets/image/Multiple/bubble1.png) no-repeat;
+    background: url(https://img2.imgtp.com/2024/03/24/U4MPwdZq.png) no-repeat;
     width: 23vw;
     height: 14vh;
     background-size: 25vw;
@@ -81,7 +41,7 @@
     z-index: 2;
 }
 .bubble2 {
-    background: url(../../assets/image/Multiple/bubble2.png) no-repeat;
+    background: url(https://img2.imgtp.com/2024/03/24/lNrmzpLW.png) no-repeat;
     width: 45vw;
     height: 28vh;
     background-size: 50vw;
@@ -91,7 +51,7 @@
     z-index: 2;
 }
 .bubble3 {
-    background: url(../../assets/image/Multiple/bubble3.png) no-repeat;
+    background: url(https://img2.imgtp.com/2024/03/24/I2PfVr7X.png) no-repeat;
     width: 30vw;
     height: 20vh;
     background-size: 35vw;
@@ -101,7 +61,7 @@
     z-index: 2;
 }
 .bubble4 {
-    background: url(../../assets/image/Multiple/bubble1.png) no-repeat;
+    background: url(https://img2.imgtp.com/2024/03/24/U4MPwdZq.png) no-repeat;
     width: 8vw;
     height: 5vh;
     background-size: 8vw;
@@ -111,7 +71,7 @@
     z-index: 2;
 }
 .bubble5 {
-    background: url(../../assets/image/Multiple/bubble1.png) no-repeat;
+    background: url(https://img2.imgtp.com/2024/03/24/U4MPwdZq.png) no-repeat;
     width: 13vw;
     height: 9vh;
     background-size: 15vw;
@@ -171,5 +131,6 @@
     font: 600 25px FZYaoTi;
     color: #989898;
     position: relative;
-    left: 75vw;
+    left: 65vw;
+    width: 30vw;
 }
