--- a/src/pages/Register2/Register2.css
+++ b/src/pages/Register2/Register2.css
@@ -5,7 +5,7 @@
     justify-content: center;
     width: 100vw;
     height: 100vh;
-    background-image: url(../../assets/image/Log-in/background.png);
+    background-image: url(https://img2.imgtp.com/2024/03/24/uDWmixEp.png);
     background-size: 1800px 1600px;
     background-position-x: 42%;
     background-position-y: 35%;
@@ -30,27 +30,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-
-.logo {
-    height: 300px;
-    width: 100%;
-    background-color: #b78a8a;
-    background: url(../../assets/image/Log-in/logo.png) no-repeat;
-    background-size: 400px;
-    background-position-x: 37%;
-    background-position-y: 70%;
-}
-
-.header-title {
-    position: absolute;
-    top: 22%;
-    width: 100%;
-    height: 80px;
-    font-size: 60px;
-    background: url(../../assets/image/Log-in/memory.png) no-repeat;
-    background-size: 220px;
-    background-position-x: 50%;
 }
 
 .submit-back {
