--- a/src/component/Footnote/Footnote.css
+++ b/src/component/Footnote/Footnote.css
@@ -14,10 +14,10 @@
     top: 15%;
 }
 
-.checkbox:hover {
+/* .checkbox:hover {
     background-color: #73abe4;
     border: transparent;
-}
+} */
 
 .submit-bottom-2 {
     display: flex;
