--- a/src/components/together/mine/Look.css
+++ b/src/components/together/mine/Look.css
@@ -52,7 +52,7 @@
     width: 30vw;
     height: 15vh;
     position: absolute;
-    top: 58vh;
+    top: 51.5vh;
     left: 52%;
     opacity: 0;
 }
@@ -62,14 +62,14 @@
 }
 
 .lookMemory{
-    height: 60vh;
     width: 80vw;
+    height: 62vh;
     background: #FFFFFF;
     position: relative;
     left: 5%;
     top: 2vh;
     border-radius: 1vh;
-    padding: 5vw;
+    padding: 5vw 5vw 5vw 3vh;
 }
 
 .lookname{
@@ -95,6 +95,7 @@
     height: 40vh;
     border: 1px solid rgba(0, 0, 0, 0.477);
     object-fit: cover;
+    border-radius: 0.5vh;
 }
 
 .lookPhoto Image {
