--- a/src/pages/foot/index.css
+++ b/src/pages/foot/index.css
@@ -66,7 +66,7 @@
 
 .footcard{
     width: 78vw;
-    height: 25vh;
+    height: 48vw;
     background: #FFFFFF;
     margin: 3vh 8vw 3vh 8vw;
     padding: 2vw 2vw 2vh 5vw;
@@ -109,8 +109,8 @@
 .footphoto{
     top: -20vh;
     left: 30%;
-    width: 11vh;
-    height: 11vh;
+    width: 20vw;
+    height: 20vw;
     margin: 0 0 5vw 4vw;
     position: relative;
     border: 1px solid rgba(0, 0, 0, 0.299);
@@ -119,7 +119,7 @@
 
 .footfeel{
     width: 89%;
-    height: 5vh;
+    height: 10vw;
     border: 1px solid rgba(0, 0, 0, 0.299);
     position: relative;
     top: -18.5vh;
@@ -130,6 +130,7 @@
 
 .content{
     width: 70vw;
+    font-size: 2vh;
     word-wrap: break-word;
 }
 
