--- a/src/pages/GoalList/GoalList.css
+++ b/src/pages/GoalList/GoalList.css
@@ -53,6 +53,8 @@
     display: flex;
     gap: 3vh;
     flex-direction: column;
+    height: 80vh;
+    position: relative;
 }
 
 .chatlist {
@@ -70,7 +72,7 @@
     gap: 1vh;
     align-items: flex-start;
     position: relative;
-    right: 5vw;
+    left: 5vw;
     top: 2vh;
 }
 
